<resources>
    <string name="app_name">Ricette</string>
    <string name="recipes_finder">RecipeFinder</string>
    <string name="button_registrazione">Registrati</string>
    <string name="button_accedi">Accedi</string>
    <string name="editText_hint_username">Numero di telefono,nome utente o e-mail</string>
    <string name="editText_hint_password">Password</string>
    <string name="editText_hint_PhoneEmail">Numero di cellulare o indirizzo e-mail</string>
    <string name="editText_hint_NameSurname">Nome e cognome</string>
    <string name="editText_hint_NomeUtente">Nome utente</string>
    <string name="editText_Nome_Ricetta">Inserisci il nome della ricetta</string>
    <string name="button_scelta_mio_profilo">Profilo utente</string>
    <string name="titolo_scelta_ricetta">Esplora le ricette</string>
    <string name="button_scelta_ingredienti">Cerca ricetta</string>
    <string name="button_inserisci_ricetta">Crea ricetta</string>
    <string name="button_seleziona">Seleziona</string>
    <string name="button_carica_img">Inserisci immagine </string>
    <string name="button_condividi_ricetta">Crea e condividi</string>
    <string name="button_mie_ricette_profilo">Le mie ricette</string>
    <string name="button_preferiti_profilo">Ricette preferite</string>
    <string name="oppure">Oppure</string>
    <string name="benvenuti">Benvenuti su RecipeFinder</string>
    <string name="descrizione_scelta">Divertitevi a sperimentare nuove ricette e a condivedere le vostre!</string>
    <string name="titolo_cerca">Scegli gli ingredienti</string>
    <string name="titolo_crea">Crea la tua ricetta</string>
    <string name="titolo_mie_ricette">Le mie ricette</string>
    <string name="titolo_preferite">Preferite</string>
    <string name="show_procedimento">Procedimento</string>
    <string name="TextViewIngredient">Ingredient</string>
    <string name="nomeRicetta">Nome ricetta</string>
    <string name="quantity">Quantità</string>
    <string name="scegli">Ingredienti</string>
    <string name="inserisci_procedimento">Inserisci il procedimento</string>
</resources>