<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".RegistrazioneActivity2">

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:fontFamily="serif"
        android:text="@string/recipes_finder"
        android:textColor="@color/gradient_white"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="184dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView2"
        app:layout_constraintVertical_bias="0.118">

        <EditText
            android:id="@+id/editTextR1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_PhoneEmail"
            android:inputType="textEmailAddress|number"
            android:textColorHint="#FF000000"
            android:visibility="visible"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="369dp" />

        <EditText
            android:id="@+id/editTextR2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_NameSurname"
            android:inputType="text"
            android:textColorHint="#FF000000"
            android:visibility="visible"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="369dp" />

        <EditText
            android:id="@+id/editTextR3"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_NomeUtente"
            android:inputType="text"
            android:textColorHint="#FF000000"
            android:visibility="visible"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="369dp" />

        <EditText
            android:id="@+id/editTextR4"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_password"
            android:inputType="textPassword"
            android:textColorHint="#FF000000"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="440dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonR2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_registrazione"
        android:onClick="registrazione"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

</androidx.constraintlayout.widget.ConstraintLayout>

