<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SceltaActivity"
    android:background="@drawable/sfondo">

    <TextView
        android:id="@+id/textViewBenv"
        android:layout_width="327dp"
        android:layout_height="76dp"
        android:fontFamily="serif"
        android:text="@string/benvenuti"
        android:textColor="@color/gradient_white"
        android:textSize="26.4sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/buttonSceltaProfilo"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_scelta_mio_profilo"
        android:onClick="sceltaProfilo"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <Button
        android:id="@+id/buttonSceltaCerca"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_scelta_ingredienti"
        android:onClick="cerca"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/buttonSceltaCrea"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_inserisci_ricetta"
        android:onClick="crea"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="315dp"
        android:layout_height="93dp"
        android:text="@string/descrizione_scelta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />
</androidx.constraintlayout.widget.ConstraintLayout>