<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".AccediActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:fontFamily="serif"
        android:text="@string/recipes_finder"
        android:textColor="@color/gradient_white"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/buttonA2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_accedi"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <EditText
            android:id="@+id/editTextUserEmaiPhonel1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_username"
            android:inputType="textEmailAddress|number"
            android:textColorHint="#FF000000"
            android:visibility="visible"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="369dp" />

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@color/gradient_white"
            android:hint="@string/editText_hint_password"
            android:inputType="textPassword"
            android:textColorHint="#FF000000"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="440dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


