<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ingredients">


    <TextView
        android:id="@+id/textView"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:fontFamily="serif"
        android:text="@string/recipes_finder"
        android:textColor="#C9F8F3F1"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/buttonregistrati"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_registrazione"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/button_accedi"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:text="@string/button_accedi"
        app:backgroundTint="#BFD34208"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />


</androidx.constraintlayout.widget.ConstraintLayout>