<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProfiloUtenteActivity">

        <ImageView
            android:id="@+id/backgroundImage3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sfondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageViewProfiloIcon"
            android:layout_width="134dp"
            android:layout_height="140dp"
            android:src="@drawable/profilo_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp" />

        <TextView
            android:id="@+id/textViewTitolo5"
            android:layout_width="327dp"
            android:layout_height="76dp"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/gradient_white"
            android:text="Username"
            android:textSize="26.4sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewProfiloIcon"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/buttonMieRicetteProfilo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/button_mie_ricette_profilo"
            android:onClick="crea"
            app:backgroundTint="#BFD34208"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40" />


        <Button
            android:id="@+id/buttonSceltaCercaProfilo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/button_scelta_ingredienti"
            android:onClick="cerca"
            app:backgroundTint="#BFD34208"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.70" />

        <Button
            android:id="@+id/buttonSceltaCreaProfilo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/button_inserisci_ricetta"
            android:onClick="crea"
            app:backgroundTint="#BFD34208"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />


        <Button
            android:id="@+id/buttonPreferitiProfilo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/button_preferiti_profilo"
            android:onClick="crea"
            app:backgroundTint="#BFD34208"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>