<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreaRicetteActivity">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sfondo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textViewTitolo2"
            android:layout_width="327dp"
            android:layout_height="76dp"
            android:fontFamily="serif"
            android:text="@string/titolo_crea"
            android:textAlignment="center"
            android:textColor="@color/gradient_white"
            android:textSize="26.4sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <ImageView
            android:id="@+id/uploadedImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@drawable/list_item_border"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitolo2"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/buttonCaricaImmagine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/button_carica_img"
            app:layout_constraintBottom_toBottomOf="@id/uploadedImage"
            app:layout_constraintEnd_toEndOf="@id/uploadedImage"
            app:layout_constraintStart_toStartOf="@id/uploadedImage"
            app:layout_constraintTop_toTopOf="@id/uploadedImage" />


        <TextView
            android:id="@+id/labelIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="serif"
            android:text="@string/scegli"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toStartOf="@+id/labelQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadedImage" />

        <TextView
            android:id="@+id/labelQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="serif"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelIngredients"
            app:layout_constraintTop_toBottomOf="@id/uploadedImage" />

        <Spinner
            android:id="@+id/spinnerIngredients"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/background_spinner_with_icon"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@+id/editTextQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelIngredients"
            app:layout_constraintWidth_percent="0.5" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/ingredient_border"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/spinnerUnitMisura"
            app:layout_constraintStart_toEndOf="@+id/spinnerIngredients"
            app:layout_constraintTop_toBottomOf="@id/labelQuantity"
            app:layout_constraintWidth_percent="0.5" />

        <Spinner
            android:id="@+id/spinnerUnitMisura"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/background_spinner_with_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextQuantity"
            app:layout_constraintTop_toBottomOf="@id/labelQuantity"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="220dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:text="+"
            android:textSize="20dp"
            app:backgroundTint="#BFD34208"
            android:background="@drawable/ingredient_border"
            app:layout_constraintTop_toBottomOf="@id/spinnerIngredients"
            app:layout_constraintStart_toEndOf="@id/spinnerIngredients"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProcedimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/inserisci_procedimento"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addButton" />

        <EditText
            android:id="@+id/editTextProcedimento"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ingredient_border"
            android:hint="@string/inserisci_procedimento"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewProcedimento" />

        <Button
            android:id="@+id/buttonCondividi"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="156dp"
            android:layout_height="71dp"
            android:text="@string/button_condividi_ricetta"
            app:backgroundTint="#BFD34208"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editTextProcedimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>