<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RicettaActivity">

        <ImageView
            android:id="@+id/backgroundImage4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sfondo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/buttonElimina2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/cestino2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="349dp"
            tools:layout_editor_absoluteY="0dp" />


        <TextView
            android:id="@+id/textViewTitolo8"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Nome ricetta"
            android:textColor="@color/gradient_white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065" />


        <ImageView
            android:id="@+id/imageViewFromDB2"
            android:layout_width="395dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/list_item_border"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitolo8"
            app:layout_constraintVertical_bias="0.05"/>

        <TextView
            android:id="@+id/textViewShowIngredients2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="serif"
            android:text="@string/scegli"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toStartOf="@+id/textViewShowQuantity2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewFromDB2" />

        <TextView
            android:id="@+id/textViewShowQuantity2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="serif"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewShowIngredients2"
            app:layout_constraintTop_toBottomOf="@id/imageViewFromDB2" />


        <LinearLayout
            android:id="@+id/ingredients_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textViewShowIngredients2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/textViewShowProcedimento2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/show_procedimento"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredients_container2"
            android:paddingTop="20dp"/>

        <TextView
            android:id="@+id/textViewPDB2"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ingredient_border"
            android:textColor="@color/black"
            android:gravity="top|start"
            android:padding="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewShowProcedimento2"
            tools:ignore="TextViewEdits" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>